change page-content scroll to page scroll, fix scroller flicker on XIAOMI

--- a/src/less/pages.less
+++ b/src/less/pages.less
@@ -8,7 +8,7 @@
 .page {
     .border-box();
     .full-size();
-    overflow: hidden;
+    overflow: auto;
     background: #efeff4;
     .translate3d(0,0,0);
     opacity: 1;
@@ -33,11 +33,10 @@
     .translate3d(100%);
 }
 .page-content {
-    .scrollable();
+    overflow: hidden;
     .border-box();
     height: auto;
     min-height: 100%;
-    overflow: hidden;
 }
 
 @pageDuration: 400ms;
